Fixed project page header spacing error

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -17,6 +17,7 @@ h1 {
   font-size: 75px;
   font-weight: bold;
   color: rgb(40, 70, 101);
+  margin: auto;
 }
 
 h2 {
